--- a/src/pages/Projects.module.css
+++ b/src/pages/Projects.module.css
@@ -129,13 +129,8 @@
   }
 
   .project_content h1 {
-    width: 100vw;
-    position: absolute;
-    top: -13vh;
+    display: none;
     background: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 
   .project_elements {
